@@ -1,5 +1,14 @@
 2022-02-17  Nikolaos Mouchtaris  <nmouchtaris@apple.com>
 
+        [Web Animations] Enable Composite Animations
+        https://bugs.webkit.org/show_bug.cgi?id=236682
+
+        Reviewed by Dean Jackson.
+
+        * Scripts/Preferences/WebPreferencesExperimental.yaml:
+
+2022-02-17  Nikolaos Mouchtaris  <nmouchtaris@apple.com>
+
         Enable CSS Motion Path by default
         https://bugs.webkit.org/show_bug.cgi?id=236681
 
